--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>vavr-jackson</artifactId>
             <version>0.10.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-vavr</artifactId>
+            <version>0.4.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
