--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@
 # Required otherwise connection will disconnect immediately!
 # OCPP 1.6 spec 3.1.2: the OCPP version must be specified in the Sec-Websocket-Protocol field.
 quarkus.websockets-next.server.supported-subprotocols=ocpp1.6
+## Supported tags
+tags.allowed=Tag1,Tag2
